tests/fixtures/invalid/pow_float_bool_bool.py
# Cannot call pow() with Float, Bool, Bool
x = pow(1.0, True, True)
